snippets/Nemerle.Statechart/Tests/testsuite/positive/final_state_and_completion_transition.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
using System.Threading;
  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;

  // flags debug;

  name "final state and completion transition";
  
   state A
   {
     _ => B;
     
     state C
     {
       a => $0;
     }
     
   }
   
   state B
   {
     a => A;
   }
  #>)]
  public class example
  {
  }



module Test
{
  Main() : void
  {
    def fsm = example();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();
    tester.Initiate("C", "EntryA", "EntryC");
    tester.Test("a", "B", "ExitC", "EntryAFinal", "ExitAFinal", "ExitA", "EntryB");
    tester.Test("a", ["B"], ["A", "C"]);
    fsm.Terminate();
  }
}

/*
BEGIN-OUTPUT
EntryA
EntryC
[C]
Ok
Processing a 'a' 
ExitC
EntryAFinal
ExitAFinal
ExitA
EntryB
[B]
Ok
Processing a 'a' 
ExitB
EntryA
EntryC
[C]
Ok
END-OUTPUT
*/
