snippets/Nemerle.Statechart/Tests/testsuite/negative/history_targeted_from_initial_must_have_default_transition.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  //flags testing;
  //flags debug;
  
  name "transition to history from initial, history must have default";
  
  state A
  {
    a => B;
  }
    
  state B
  {
    0 => H;
    
    state C
    {

    }
    
    (H); // E: History pseudostate "BHistory" targeted from initial pseudostate "BInitial" must have transition to default state
  }
  
  #>)]
  public class example
  {
  }

